update packages, add widgets

--- a/Project.toml
+++ b/Project.toml
@@ -1,5 +1,6 @@
 [deps]
 CSSUtil = "70588ee8-6100-5070-97c1-3cb50ed05fe8"
+Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Interact = "c601a237-2ae4-5e1e-952c-7a85b0c7eef1"
 Markdown = "d6f4376e-aef5-505a-96c1-9c027394607a"
 Mux = "a975b10e-0019-58db-a62f-e48ff68538c9"
